[gd_scene load_steps=18 format=3 uid="uid://ck2orlq2o5qmb"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_2n5gr"]
[ext_resource type="Texture2D" uid="uid://ea7yn7iawkw3" path="res://Assets/Texture/Ship Particle.png" id="3_ukbv1"]
[ext_resource type="Texture2D" uid="uid://5po6gvwo0aer" path="res://Assets/Texture/SmallShip-sheet.png" id="4_pf4u5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t0je3"]
atlas = ExtResource("4_pf4u5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5a0m"]
atlas = ExtResource("4_pf4u5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_efovp"]
atlas = ExtResource("4_pf4u5")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x18ul"]
atlas = ExtResource("4_pf4u5")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h7ko"]
atlas = ExtResource("4_pf4u5")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qsuqx"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_t0je3")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_f5a0m")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_efovp")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_x18ul")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_4h7ko")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_3tb6o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../SpawnEffect:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0phdq"]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_nph4m"]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../SpawnEffect:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_drjby"]
_data = {
"RESET": SubResource("Animation_3tb6o"),
"hit": SubResource("Animation_0phdq"),
"spawn": SubResource("Animation_nph4m")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_hxvpv"]
radius = 4.12311

[sub_resource type="Curve" id="Curve_bueo5"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2gm8y"]
curve = SubResource("Curve_bueo5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8lr10"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
gravity = Vector3(0, 0, 0)
initial_velocity_min = 70.0
initial_velocity_max = 110.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 1.5
scale_max = 1.5
scale_curve = SubResource("CurveTexture_2gm8y")
turbulence_enabled = true
turbulence_noise_scale = 1.0
turbulence_noise_speed = Vector3(0.5, 0.5, 0.5)

[node name="Player" type="CharacterBody2D"]
collision_mask = 514
motion_mode = 1
script = ExtResource("1_2n5gr")

[node name="SpawnEffect" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
speed_scale = 1.65
texture = ExtResource("3_ukbv1")
emission_shape = 1
emission_sphere_radius = 37.37
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
radial_accel_min = -100.0
radial_accel_max = -100.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qsuqx")
frame_progress = 0.447042

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_drjby")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hxvpv")

[node name="FireEffect" type="GPUParticles2D" parent="."]
position = Vector2(-10, 0)
amount = 15
process_material = SubResource("ParticleProcessMaterial_8lr10")
texture = ExtResource("3_ukbv1")
lifetime = 0.5

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 2

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_hxvpv")

[node name="NormalShootPos" type="Node2D" parent="."]

[node name="ShootSpot" type="Marker2D" parent="NormalShootPos"]
position = Vector2(12, 0)

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
